tests/functional/lang/eval-fail-derivationStrict-12.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-12.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "foo";

       … while evaluating derivation 'foo'
         whose name attribute is located at /pwd/lang/eval-fail-derivationStrict-12.nix:2:3

       … while evaluating attribute 'outputs' of derivation 'foo'
         at /pwd/lang/eval-fail-derivationStrict-12.nix:3:3:
            2|   name = "foo";
            3|   outputs = "out";
             |   ^
            4|   __structuredAttrs = true;

       error: expected a list but found a string: "out"
